@@ -30,7 +30,7 @@ function oracle_connect_db($host = null, $db = null, $user = null, $pass = null,
 	
 	// Non-persistent connection: This will help to avoid mysql errors like "has gone away" or locking problems
 	// If you want persistent connections change it to oci_pconnect().
-	$connect_id = oci_connect($user, $pass, '//' . $host . ':' . $port . '/' . $db);
+	$connect_id = oci_new_connect($user, $pass, '//' . $host . ':' . $port . '/' . $db);
 	if (! $connect_id) {
 		return false;
 	}
