@@ -1,3 +1,10 @@
+2012-10-16  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/db/postgresql.php,
+	  include/db/mysql.php,
+	  include/db/oracle.php: Always open a new connection. Useful
+	  if the history database is in the same host as the main database.
+
 2012-10-15 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* include/functions_extensions.php,
